<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:onClick="onBack"
        android:src="@drawable/ic_back" />

    <!-- Main Layout -->

    <LinearLayout
        android:id="@+id/layoutMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ivBack"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:src="@drawable/ic_logo" />

        <!-- Email -->

        <EditText
            android:id="@+id/etEmail"
            style="@style/normal_editbox"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

        <!-- Password -->

        <EditText
            android:id="@+id/etPassword"
            style="@style/normal_editbox"
            android:layout_marginTop="@dimen/login_item_margin"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <!-- Confirm Password -->

        <EditText
            android:id="@+id/etConfirmPassword"
            style="@style/normal_editbox"
            android:layout_marginTop="@dimen/login_item_margin"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword" />

        <!-- Register -->

        <TextView
            android:id="@+id/tvRegister"
            style="@style/normal_action_label"
            android:layout_marginTop="@dimen/login_item_margin"
            android:background="@drawable/action_button_magento_bg_shape"
            android:onClick="onRegister"
            android:text="@string/create_account" />

        <!-- Facebook Login -->

        <LinearLayout
            android:id="@+id/layoutFacebookLogin"
            style="@style/normal_action_layout"
            android:layout_marginTop="@dimen/login_item_margin"
            android:background="@drawable/action_button_facebook_bg_shape"
            android:onClick="onFacebookLogin">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_facebook" />

            <TextView
                style="@style/normal_action_label"
                android:layout_marginLeft="20dp"
                android:paddingBottom="0dp"
                android:paddingTop="0dp"
                android:text="@string/signup_with_facebook" />
        </LinearLayout>

        <!-- Google+ Login -->

        <LinearLayout
            android:id="@+id/layoutGoogleLogin"
            style="@style/normal_action_layout"
            android:layout_marginTop="@dimen/login_item_margin"
            android:onClick="onGoogleLogin"
            android:background="@drawable/action_button_gplus_bg_shape">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_gplus" />

            <TextView
                style="@style/normal_action_label"
                android:layout_marginLeft="20dp"
                android:paddingBottom="0dp"
                android:paddingTop="0dp"
                android:text="@string/signup_with_gplus" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
