<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:onClick="onBack"
        android:src="@drawable/ic_back" />

    <!-- Main Layout -->

    <LinearLayout
        android:id="@+id/layoutMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ivBack"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:src="@drawable/ic_logo" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:src="@drawable/ic_asterics" />

        <TextView
            style="@style/normal_label"
            android:layout_marginBottom="20dp"
            android:text="@string/reset_password"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            style="@style/normal_label"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/forgot_passowrd_hint" />

        <!-- Email -->

        <EditText
            android:id="@+id/etEmail"
            style="@style/normal_editbox"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

        <!-- Send -->

        <TextView
            android:id="@+id/tvSend"
            style="@style/normal_action_label"
            android:layout_marginTop="@dimen/login_item_margin"
            android:background="@drawable/action_button_magento_bg_shape"
            android:onClick="onStart"
            android:text="@string/send"
            android:textAllCaps="true" />

    </LinearLayout>
</RelativeLayout>
