<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <!-- Selection Bar -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layoutAll"
                style="@style/tab_layout">

                <TextView
                    style="@style/tab_label"
                    android:text="@string/events_all" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutAttended"
                style="@style/tab_layout">

                <TextView
                    style="@style/tab_label"
                    android:text="@string/events_attended" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutHosted"
                style="@style/tab_layout">

                <TextView
                    style="@style/tab_label"
                    android:text="@string/events_hosted" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:paddingRight="10dp">

            <LinearLayout
                android:id="@+id/layoutSortBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/filtering_label"
                    android:text="@string/sort_by" />

                <TextView
                    android:id="@+id/tvSortMode"
                    style="@style/filtering_label"
                    android:layout_marginLeft="5dp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/ic_arrow_grey" />

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Items -->

            <com.baoyz.swipemenulistview.SwipeMenuListView
                android:id="@+id/lvItems"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:dividerHeight="0dp" />

            <TextView
                android:id="@+id/tvNoEvents"
                style="@style/medium_label"
                android:layout_centerInParent="true"
                android:text="@string/no_events"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/ivCreateNew"
        style="@style/common_icon"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:src="@drawable/ic_plus" />

</RelativeLayout>